<resources>
    <string name="app_name">evnt</string>
    <string name="facebook_app_id">2425281751060522</string>
    <string name="fb_login_protocol_scheme">fb2425281751060522</string>
    <string name="menu_pick">Choose</string>
    <string name="menu_browse">Browse</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_phone">My Events</string>
    <string name="menu_profile">Profile</string>
    <string name="by_browse_nuance">by </string>
    <string name="you_the_host">by you</string>
    <string name="im_in">LET\'S GO!</string>
    <string name="nevermind">NEVERMIND</string>
    <string name="more_button">MORE</string>
    <string name="edit_button">EDIT</string>
    <string name="delete_button">DELETE</string>
    <string name="chat_button">CHAT</string>
    <string name="browse">browse</string>
    <string name="attending">attending</string>
    <string name="event_details">Event Details</string>
    <string name="search">Search Events</string>
    <string name="search_hint">Search by text (name,desc) &#8230;</string>

    <!-- Cached ident props -->
    <string name="fb_id">facebookId</string>
    <string name="user_id">userId</string>
    <string name="access_token">accessToken</string>
    <string name="token">token</string>
    <string name="profile_pic">profileImgUrl</string>
    <string name="user_name">userName</string>
    <string name="user_email">userEmail</string>

    <!-- API URLs-->
    <string name="oauth_endpoint">https://api.evnt.me/users/oauth</string>
    <string name="event_get_in">https://api.evnt.me/events/api/in/</string>
    <string name="event_get_avail">https://api.evnt.me/events/api/avail/</string>
    <string name="event_create">https://api.evnt.me/events/create/</string>
    <string name="event_edit">https://api.evnt.me/events/edit/</string>
    <string name="event_chat">https://api.evnt.me/chat/init/</string>

    <string name="map_url_call">https://maps.googleapis.com/maps/api/staticmap?</string>
    <string name="zoom_setting">&amp;zoom=15&amp;size=</string>

    <string name="static_api_key">&amp;key=AIzaSyCLAL5fWb0dCVQCkeZOi94UV0tsL1Dukq0</string>

    <!-- Notifs -->
    <string name="default_notification_channel_name">event</string>
    <string name="default_notification_channel_id">fcm_event_channel</string>
</resources>
